--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,10 @@
 
 # misc
 .DS_Store
-.env.local
+.env
 .env.test.local
 .env.production.local
+.env.development.local
 
 npm-debug.log*
 yarn-debug.log*
